--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,10 @@ jobs:
       matrix:
         os: [macos-latest, windows-latest, ubuntu-latest]
         shared: [ON, OFF]
-
+    permissions:
+      contents: write
+      attestations: write
+      id-token: write
     steps:
      - uses: actions/checkout@v4
      - uses: ilammy/msvc-dev-cmd@v1
@@ -68,9 +71,18 @@ jobs:
        shell: bash -l {0}
        run: |
           ninja
-          cmake --build .  --config Release --target package_source
        working-directory: ./libgeotiff/build
 
+     - name: Generate source distribution
+       shell: bash -l {0}
+       if: matrix.os == 'ubuntu-latest'
+       run: |
+          cmake --build .  --config Release --target package_source
+       working-directory: ./libgeotiff/build
+     - name: Attest
+       uses: actions/attest-build-provenance@v1
+       with:
+          subject-path: './libgeotiff/build/libgeotiff-*'
      - uses: actions/upload-artifact@v4
        if: matrix.os == 'ubuntu-latest' && matrix.shared == 'ON'
        name: Gather source distribution artifact
@@ -79,5 +91,32 @@ jobs:
          if-no-files-found: error
          path: |
           ./libgeotiff/build/libgeotiff-*
+
+  release:
+    name: Gather and attach release
+    runs-on: ubuntu-latest
+    needs: build
+    permissions:
+      contents: write
+      attestations: write
+      id-token: write
+    steps:
+     - uses: actions/download-artifact@v4
+       name: Download release artifact
+       with:
+         name: source-package-ubuntu-latest
+         path: release
+
+     - uses: softprops/action-gh-release@v2
+       if: startsWith(github.ref, 'refs/tags/')
+       name: Publish release as draft
+       with:
+         make_latest: false
+         fail_on_unmatched_files: true
+         prerelease: true
+         generate_release_notes: true
+         draft: true
+         files: |
+          release/libgeotiff-*
 
 
